# credit-default-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  ann_model.h5  app  app.py  cli.py  experiments.ipynb  mcp_config.json.example  my_model.keras  pyproject.toml  requirements.txt  test_model_loading.py  vercel.json
backend/: README.md  build.sh  main.py  requirements.txt
backend/app/api/: app.py  router.py
backend/app/config/: settings.py
backend/app/models/: mock_predictor.py  predictor.py  train.py
backend/app/schemas/: request_models.py
backend/app/utils/: model_loader.py
backend/models/: classification_model.keras  regression_scaler.pkl
backend/scripts/: cli.py  run.py
backend/tests/: test_model_loading.py
docs/: CreditPrediction_Landing.jsx  CreditPrediction_PRD.md
examples/: api_client.py
frontend/: .env  README.md  _redirects  deploy.sh  index.html  metadata.json  tailwind.config.js  tailwind.config.ts  vercel.json  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/css/: styles.css
frontend/js/: scripts.js
frontend/src/: App.tsx  index.css  styles.css  types.ts
models/: classification_scaler.pkl  regression_model.keras
notebook/: experiments.ipynb  limit_balRegression.ipynb
src/api/: app.py  router.py
src/config/: settings.py
src/models/: mock_predictor.py  train.py
src/utils/: data_processor.py  model_loader.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_data_processor.py  test_model_loader.py  test_predictor.py
(+20 files in other folders)
